@@ -5,6 +5,7 @@
 - Don't crash when the quit action button is pressed (bug #5118).
 - Properly set the systray orientation property (bug #5149).
 - Fix xfce-hvbox not working with gtk 2.16 (bug #5166).
+- Don't crash the launcher plugin when the launcher entry list is empty.
 
 
 4.6.0
